syntax = "proto3";

message sampleStruct1 {
  int64 structId = 1;
  int64 integer = 2;
  double float = 3;
  string stringData = 4;
}

message sampleStruct2 {
  int64 structId = 1;
  int64 integer = 2;
  double float = 3;
  string stringData = 4;

  repeated int64 arrayInt = 5;
  repeated double arrayFloat = 6;
  string extendedStringData = 7;
}

message sampleStruct3 {
  int64 structId = 1;
  int64 integer = 2;
  double float = 3;
  string stringData = 4;
  repeated int64 arrayInt = 5;
  repeated double arrayFloat = 6;
  string extendedStringData = 7;

  sampleStruct1 dict1 = 8;
  sampleStruct2 dict2 = 9;
}
